Criar cite de estrogonofe

--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav></nav>
-    <header></header>
-    <section></section>
-    <footer></footer>
-</body>
-</html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>estrogonofe</title>
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Bahianita&display=swap" rel="stylesheet">
+        <link rel="shortcut icon" href="chicken.png" type="image/x-icon">
+    </head>
+    <body>
+        <nav>
+            <div id="mobile">
+                <img src="img/burger.png" alt="menu hamburguer">
+            </div>
+            <div id="desktop">
+                <a href="">Home</a>
+                <a href="">Receitas</a>
+                <a href="">Contato</a>
+                <a href="">Onde comprar estrogonofe</a>
+            </div>
+        </nav>
+        <header>
+            <h1>Vire Molho Agora</h1>
+        </header>
+        <section>
+            <p>
+                Acrescente a mostarda, o catchup, a pimenta-do-reino e o tomate picado. Quando o molho estiver encorpado e a carne macia, adicione os cogumelos e o creme de leite. Mexa por 1 minuto e retire do fogo. Sirva imediatamente, acompanhado de arroz e batata palha.
+            </p>
+            
+        </section>
+        <footer>
+            <aside>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gHfFdaeaGoY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </aside>
+            <div>
+                <a href="https://facebook.com" target="_blank">
+                    <img src="facebook-logo-button.png" alt="">
+                </a>
+                <a href="https://www.msn.com/pt-br/" target="_blank">
+                    <img src="msn-messenger-logo.png" alt="">
+                </a>
+                <a href="myspace-logotype.png" target="_blank">
+                    <img src="img/myspace-logotype.png" alt="">
+                </a>
+            </div>
+        </footer>
+    </body>
+    </html>
